--- a/.env
+++ b/.env
@@ -29,8 +29,8 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME="ismaelouiya@gmail.com"
-MAIL_PASSWORD='Ismael@1919'
+MAIL_USERNAME=""
+MAIL_PASSWORD=''
 MAIL_ENCRYPTION=tls
 
 
